@@ -61,29 +61,29 @@
 
 # -=-=-=-=-=-=- Latest Versions -=-=-=-=-=-=- No Update Required -=-=-=-=-=-=-
 
-# Warcraft III - TFT (Expansion) 1.21
+# Warcraft III - TFT (Expansion) 1.21b
 # Note: this version check is sent in both FT and ROC mode
 "A=3845581634 B=880823580 C=1363937103 4 A=A-S B=B-C C=C-A A=A-B" \
  IX86ver1.mpq \
  IX86 \
  W3XP \
- "war3.exe 12/28/06 20:35:21 1572307" \
+ "war3.exe 07/19/07 18:41:12 409660" \
  0x00000015 \
- 1.21.0.119 \
- 0xab35b5f1 \
- W3XP_121
+ 1.21.1.156 \
+ 0x1b735294 \
+ W3XP_121B
 
-# Warcraft III - ROC 1.21
+# Warcraft III - ROC 1.21b
 # Note: this version check is sent in both FT and ROC mode
 "A=3845581634 B=880823580 C=1363937103 4 A=A-S B=B-C C=C-A A=A-B" \
  IX86ver1.mpq \
  IX86 \
  WAR3 \
- "war3.exe 12/28/06 20:35:21 1572307" \
+ "war3.exe 07/19/07 18:41:12 409660" \
  0x00000015 \
- 1.21.0.119 \
- 0xab35b5f1 \
- WAR3_121
+ 1.21.1.156 \
+ 0x1b735294 \
+ WAR3_121B
 
 # Diablo II - LoD (Expansion) 1.11b
 "A=3845581634 B=880823580 C=1363937103 4 A=A-S B=B-C C=C-A A=A-B" \
@@ -319,6 +319,18 @@
 
 # =================== WarCraft 3 Expansion Entries ==================
 
+# Warcraft III - TFT (Expansion) 1.21a
+# Note: this version check is sent in both FT and ROC mode
+"A=3845581634 B=880823580 C=1363937103 4 A=A-S B=B-C C=C-A A=A-B" \
+ IX86ver1.mpq \
+ IX86 \
+ W3XP \
+ "war3.exe 12/28/06 20:35:21 1572307" \
+ 0x00000015 \
+ 1.21.0.119 \
+ 0xab35b5f1 \
+ W3XP_121A
+
 # Warcraft III - TFT (Expansion) 1.20e
 # Note: this version check is sent in both FT and ROC mode
 "A=3845581634 B=880823580 C=1363937103 4 A=A-S B=B-C C=C-A A=A-B" \
@@ -526,6 +538,18 @@
 # W3XP_107A
 
 # ====================== WarCraft 3 Entries ========================
+
+# Warcraft III - ROC 1.21a
+# Note: this version check is sent in both FT and ROC mode
+"A=3845581634 B=880823580 C=1363937103 4 A=A-S B=B-C C=C-A A=A-B" \
+ IX86ver1.mpq \
+ IX86 \
+ WAR3 \
+ "war3.exe 12/28/06 20:35:21 1572307" \
+ 0x00000015 \
+ 1.21.0.119 \
+ 0xab35b5f1 \
+ WAR3_121A
 
 # Warcraft III - ROC 1.20e
 # Note: this version check is sent in both FT and ROC mode
@@ -1748,26 +1772,26 @@
 # ==================== Diablo (original) entries =======================
 
 # Diablo 109b
-#"A=3845581634 B=880823580 C=1363937103 4 A=A-S B=B-C C=C-A A=A-B" \
-# IX86ver1.mpq \
-# IX86 \
-# DRTL \
-# "Diablo.exe 05/18/01 23:10:57 757760" \
-# 0x0000002a \
-# 1.0.9.2 \
-# 0xac337ef9 \
-# DRTL_109B
+"A=3845581634 B=880823580 C=1363937103 4 A=A-S B=B-C C=C-A A=A-B" \
+ IX86ver1.mpq \
+ IX86 \
+ DRTL \
+ "Diablo.exe 05/18/01 23:10:57 757760" \
+ 0x0000002a \
+ 1.0.9.2 \
+ 0xac337ef9 \
+ DRTL_109B
 
 # Diablo 109
-#"A=3845581634 B=880823580 C=1363937103 4 A=A-S B=B-C C=C-A A=A-B" \
-# IX86ver1.mpq \
-# IX86 \
-# DRTL \
-# "Diablo.exe 05/12/01 00:53:17 757760" \
-# 0x0000002a \
-# 1.0.9.1 \
-# 0xbcaf354d \
-# DRTL_109
+"A=3845581634 B=880823580 C=1363937103 4 A=A-S B=B-C C=C-A A=A-B" \
+ IX86ver1.mpq \
+ IX86 \
+ DRTL \
+ "Diablo.exe 05/12/01 00:53:17 757760" \
+ 0x0000002a \
+ 1.0.9.1 \
+ 0xbcaf354d \
+ DRTL_109
 
 # Diablo 108
 #"A=3845581634 B=880823580 C=1363937103 4 A=A-S B=B-C C=C-A A=A-B" \
@@ -2387,6 +2411,7 @@
 # NULL \
 # 0 \
 # 0.0.0.0 \
+# 0x0 \
 # DRTL_1xx
 
 ##### Mac OS X (XMAC) ########################################################
@@ -2448,6 +2473,7 @@
 # NULL \
 # 0 \
 # 0.0.0.0 \
+# 0x0 \
 # DRTL_1xx
 
 ##### Mac OS Classic (PMAC) ##################################################
@@ -2509,6 +2535,7 @@
 # NULL \
 # 0 \
 # 0.0.0.0 \
+# 0x0 \
 # DRTL_1xx
 
 #                                                                            #
